update docker entrypoint